fix: font size in nav bar

--- a/theme-assets/css/main.css
+++ b/theme-assets/css/main.css
@@ -13099,7 +13099,14 @@ video {
 
  html {
     font-size: 10px;
-} 
+}
+
+.navbar-nav .dropdown-item,
+.navbar-nav .nav-link,
+.navbar-nav .dropdown-toggle,
+.navbar-nav .btn-gradient-purple {
+    font-size: 1.3rem !important;
+}
 
 body {
     line-height: 1.625;
