--- a/theme-assets/css/Account-Generation.css
+++ b/theme-assets/css/Account-Generation.css
@@ -1,99 +1,16 @@
-.bg-blue-gray-light {
-    --bg-opacity: 1;
-    background-color: #EEF2F5;
-    background-color: rgba(238, 242, 245, var(--bg-opacity));
-}
+#about:before {
+    content : '';
+    background : url('./theme-assets/images/what-is-crypto-shape.png') no-repeat center right;
+    width : 236px;
+    position : absolute;
+    left : 0;
+    height : 729px;
+  }
 
-.-ml-12 {
-    margin-left: -3rem;
-}
-
-.justify-end {
-    justify-content: flex-end;
-}
-
-.-mr-12 {
-    margin-right: -3rem;
-}
-
-.md\:grid-cols-8 {
-    grid-template-columns: repeat(8, minmax(0, 1fr));
-}
-
-.md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.gap-24 {
-    grid-gap: 6rem;
-    gap: 6rem;
-}
-.grid {
-    display: grid;
-}
-
-.items-center {
-    align-items: center;
-}
-
-.items-start {
-    align-items: flex-start;
-}
-
-.flex-col {
-    flex-direction: column;
-}
-
-.flex {
-    display: flex;
-}
-
-.inline-flex {
-    display: inline-flex;
-}
-
-.md\:inline-flex {
-    display: inline-flex;
-}
-
-.md\:col-span-3 {
-    grid-column: span 3 / span 3;
-}
-
-.col-span-6 {
-    grid-column: span 6 / span 6;
-}
-
-.md\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
-}
-
-.md\:py-16 {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-}
-
-.justify-end {
-    justify-content: flex-end;
-}
-
-.border-black {
-    --border-opacity: 1;
-    border-color: #000;
-    border-color: rgba(0, 0, 0, var(--border-opacity));
-}
-
-.col-span-6 {
-    grid-column: span 6 / span 6;
-}
-
-.md\:col-span-5 {
-    grid-column: span 5 / span 5;
-}
-
-.bg-primary-base {
-    --bg-opacity: 1;
-    background-color: #000000;
-    background-color: rgba(0, 0, 0, var(--bg-opacity));
+  hr{
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
+    margin-top: 10px;
 }
