--- a/theme-assets/css/Secure-Crypto-Wallet.css
+++ b/theme-assets/css/Secure-Crypto-Wallet.css
@@ -1,28 +1,16 @@
-.md\:mt-20 {
-    margin-top: 5rem;
-}
+#about:before {
+    content : '';
+    background : url('./theme-assets/images/what-is-crypto-shape.png') no-repeat center right;
+    width : 236px;
+    position : absolute;
+    left : 0;
+    height : 729px;
+  }
 
-.-z-1 {
-    z-index: -1;
+  hr{
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
+    margin-top: 10px;
 }
-
-.w-screen {
-    width: 100vw;
-}
-
-.right-0 {
-    right: 0;
-}
-
-.h-full {
-    height: 100%;
-}
-
-.lg\:pr-64 {
-    padding-right: 16rem;
-}
-
-.lg\:pl-8 {
-    padding-left: 2rem;
-}
-
