--- a/src/scss/bootstrap/_mixins.scss
+++ b/src/scss/bootstrap/_mixins.scss
@@ -17,7 +17,7 @@
 @import "mixins/visibility";
 
 // // Components
-@import "mixins/alert";
+// @import "mixins/alert";
 @import "mixins/buttons";
 @import "mixins/caret";
 @import "mixins/pagination";
