--- a/theme-assets/css/bootstrap.css
+++ b/theme-assets/css/bootstrap.css
@@ -5212,7 +5212,7 @@ input[type='submit'].btn-block, input[type='reset'].btn-block, input[type='butto
   border-radius : 0;
 }
 
-.alert {
+/* .alert {
   position : relative;
   padding : 0.75rem 1.25rem;
   margin-bottom : 1rem;
@@ -5333,7 +5333,7 @@ input[type='submit'].btn-block, input[type='reset'].btn-block, input[type='butto
 }
 .alert-dark .alert-link {
   color : #040505;
-}
+} */
 
 @-webkit-keyframes progress-bar-stripes {
   from {
