--- a/theme-assets/css/template-3d-animation.css
+++ b/theme-assets/css/template-3d-animation.css
@@ -2353,7 +2353,7 @@ svg#loader g:last-child circle {
 
 /*  Sales Notification
     -------------------------------------------------------------------------------------------*/
-.alert-minimalist {
+/* .alert-minimalist {
   background-color : white;
   border-radius : 5px;
   -webkit-box-shadow : 0 5px 40px rgba(14, 42, 76, 0.2);
@@ -2395,7 +2395,7 @@ svg#loader g:last-child circle {
   font-size : 70%;
   color : rgba(149, 149, 149, 0.7);
   margin-top : 4px;
-}
+} */
 
 /*	Page sections css
 * 	----------------------------------------------------------------------------------------------*/
