--- a/theme-assets/css/template-3d-animation.css
+++ b/theme-assets/css/template-3d-animation.css
@@ -4331,7 +4331,7 @@ body.inner-page {
 }
 
 header .navbar.navbar-fixed {
-  background : #194089;
+  /*background : #194089;*/
 }
 
 header .navbar .dropdown .dropdown-menu .dropdown-item {
