--- a/theme-assets/css/template-3d-animation.css
+++ b/theme-assets/css/template-3d-animation.css
@@ -1869,7 +1869,7 @@ svg#loader g:last-child circle {
   position : absolute;
   bottom  : 0vh;
   z-index : 0;
-  height : 100vh !important;
+  height : 100% !important;
 }
 
 
