--- a/assets/scss/style-rtl.scss
+++ b/assets/scss/style-rtl.scss
@@ -1,5 +1,5 @@
 /*================================================================================
-	Item Name: Crypto ICO - Cryptocurrency Website Landing Page HTML Template
+	Item Name: Crypto ICO - Cryptocurrency Website Landing Page HTML PCN
 	Version: 1.0
 	Author: PIXINVENT
 	Author URL: http://www.themeforest.net/user/pixinvent
