--- a/assets/scss/variables/PCN-intro-video-variables.scss
+++ b/assets/scss/variables/PCN-intro-video-variables.scss
@@ -1,6 +1,6 @@
 //	================================================================================================
-//	File Name: template-3d-graphics-variables.scss
-//	Description: Custom theme specific variables for 3d graphics template
+//	File Name: PCN-intro-video-variables.scss
+//	Description: Custom theme specific variables and other content variations
 //	----------------------------------------------------------------------------------------------
 //	Version: 1.0
 //	Author: PIXINVENT
@@ -13,90 +13,87 @@
 //  We suggest you to use this (assets/scss/variables/theme-variables.scss) file for overriding the variables.
 //  ================================================================================================
 
-
 // Navbar 
-$navbar-radius: 0.25rem;
-
-// Dark Bg Font Colors
-$dark-bg-color1: #c7b8ff;
+$navbar-radius: 2rem;
 
 // Grey color variants
 $grey-accent1: #161616;
-$grey-accent2: #7d7d7d;
-$grey-accent3: #3f3f3f;
+$grey-accent2: #3f3f3f;
+$grey-accent3: #7d7d7d;
 
 // Main header color
-$header-gradient1:    #140e38;
-$header-gradient2:    #194089;
+$header-gradient1:    #f5f3fb; 
+$header-gradient2:    #f5f3fb;
 
 // Button color
-$button-gradient1:    #bf68e6;
-$button-gradient2:    #9e48cd;
+$button-gradient1:    #28bcfd;
+$button-gradient2:    #1d78ff;
 
 // If any section has background color or gradient
 $section-gradient1:    $header-gradient1;
 $section-gradient2:    $header-gradient2;
-$section-bg: #fbfaff;
+$section-bg: #f9f8ff;
+
+// Whitepaper Icon color 
+$whitepaper-icon: $button-gradient2;
 
 // Token box background color
 $token-gradient1:    #ff4137;
 $token-gradient2:    #fdc800;
-$token-button-gradient1:    #29beff;
-$token-button-gradient2:    #1c76fe;
-$token-button-radius: 0.25rem;
-$token-sale-icon-color: $white;
+$token-button-gradient1:    $button-gradient1;
+$token-button-gradient2:    $button-gradient2;
+$token-button-radius: 2rem;
+$token-sale-icon-color: $grey-accent3;
 
 // Footer section background
-$footer-gradient1:    $header-gradient1;
-$footer-gradient2:    $header-gradient2;
+$footer-gradient1:    #f9f8ff;
+$footer-gradient2:    #f9f8ff;
 
 // Progressbar gradient
-$progress-gradient1:    #29beff;
-$progress-gradient2:    #1c76fe;
-// Whitepaper Icon color 
-$whitepaper-icon: $header-gradient2;
+$progress-gradient1:    $button-gradient1;
+$progress-gradient2:    $button-gradient2;
 
 // Team border color
-$team-gradient1:    $progress-gradient1;
-$team-gradient2:    $progress-gradient2;
+$team-gradient1:    $button-gradient1;
+$team-gradient2:    $button-gradient2;
 
 // Active Team border color
-$team-active-gradient1:    #ff4137;
-$team-active-gradient2:    #fdc800;
+$team-active-gradient1:    $token-gradient1;
+$team-active-gradient2:    $token-gradient2;
 
 // FAQ icon background color
 $faq-icon-gradient1:    $header-gradient1;
 $faq-icon-gradient2:    $header-gradient2;
 
 // FAQ text color
-$faq-text-color: $dark-bg-color1;
-$faq-active-text-color: $white;
+$faq-text-color: $grey-accent2;
+$faq-active-text-color: $grey-accent2;
 
-$faq-tab-active-color:  #7240a5;
+$faq-tab-active-color:  #1f86ff;
 
 // Roadmap Timestamp Color
 $roadmap-timestamp-color: $grey-accent2;
 
 // Roadmap prev/next button color
-$roadmap-button-gradient1:    $button-gradient1;
-$roadmap-button-gradient2:    $button-gradient2;
+$roadmap-button-gradient1:    $token-gradient1;
+$roadmap-button-gradient2:    $token-gradient2;
 
 // Roadmap circle & border color
-$roadmap-circle-gradient1:    $progress-gradient1;
-$roadmap-circle-gradient2:    $progress-gradient2;
-$roadmap:    #24a8f2;
+$roadmap-circle-gradient1:    $button-gradient1;
+$roadmap-circle-gradient2:    $button-gradient2;
+$roadmap:    #26b0fd;
 
 // Roadmap active box color
-$roadmap-active-box-gradient1:    $progress-gradient1;
-$roadmap-active-box-gradient2:    $progress-gradient2;
+$roadmap-active-box-gradient1:    $button-gradient1;
+$roadmap-active-box-gradient2:    $button-gradient2;
 
 // Roadmap active button color
-$roadmap-active-button-gradient1:    $button-gradient1;
-$roadmap-active-button-gradient2:    $button-gradient2;
+$roadmap-active-button-gradient1:    $token-gradient1;
+$roadmap-active-button-gradient2:    $token-gradient2;
 
 // Roadmap active circle color
-$roadmap-active-circle-gradient1:    $button-gradient1;
-$roadmap-active-circle-gradient2:    $button-gradient2;
+$roadmap-active-circle-gradient1:    $token-gradient1;
+$roadmap-active-circle-gradient2:    $token-gradient2;
 
 // Contact icons color
 $contact-icon-color: $faq-tab-active-color;
