--- a/our.css
+++ b/our.css
@@ -12,3 +12,14 @@
         
     }
 }
+
+
+#loader-video {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+        
+}
