--- a/our.css
+++ b/our.css
@@ -236,3 +236,10 @@
 }
 
 
+/* 
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100% !important;
+    background: #00356B;
+  } */
