--- a/theme-assets/css/PCN-3d-animation.css
+++ b/theme-assets/css/PCN-3d-animation.css
@@ -13,6 +13,9 @@
 
     -------------------------------------------------------------------------------------------*/
 
+    * {
+      font-family: "Manrope", sans-serif;
+    }
 
     body {
   overflow-x : hidden;
@@ -398,15 +401,15 @@ svg#loader g:last-child circle {
        -o-transition : 0.5s;
      -moz-transition : 0.5s;
           transition : 0.5s;
-  background-image : -webkit-linear-gradient(40deg, #000000 20%, #290ecb 51%, #d91414 90%);
-  background-image :    -moz-linear-gradient(50deg, #000000 20%, #290ecb 51%, #d91414 90%);
-  background-image :      -o-linear-gradient(50deg, #000000 20%, #290ecb 51%, #d91414 90%);
-  background-image :         linear-gradient(40deg, #000000 20%, #290ecb 51%, #d91414 90%);
+  background-image : -webkit-linear-gradient(40deg, #154a75 20%, #130278 51%, #18b0d7 90%);
+  background-image :    -moz-linear-gradient(50deg, #154a75 20%, #130278 51%, #18b0d7 90%);
+  background-image :      -o-linear-gradient(50deg,  #154a75 20%, #130278 51%, #18b0d7 90%);
+  background-image :         linear-gradient(50deg,  #154a75 20%, #130278 51%, #18b0d7 90%);
   background-position : left center;
   -webkit-background-size : 200% auto;
           background-size : 200% auto;
   border : 0;
-  color : #FFFFFF;
+  color : #18b0d7;
 }
 .btn-gradient-purple:hover, .btn-gradient-purple:active {
   background-position : right center;
@@ -420,8 +423,8 @@ svg#loader g:last-child circle {
   background-image :         linear-gradient(40deg, #000000 20%, #290ecb 51%, #d91414 90%);
 }
 .btn-gradient-purple.btn-glow {
-  -webkit-box-shadow : 0 0 12px 0 #000000;
-          box-shadow : 0 0 12px 0 #000000;
+  -webkit-box-shadow : 0 0 12px 0 #18b0d7;
+          box-shadow : 0 0 12px 0 #18b0d7;
 }
 
 .btn-light {
