--- a/theme-assets/css/PCN-3d-animation2.css
+++ b/theme-assets/css/PCN-3d-animation2.css
@@ -2791,7 +2791,7 @@
       
       /* Mobile App section : Mobile App button, information and image */
       .mobile-app {
-        padding-top : 185px;
+        /* padding-top : 185px; */
       }
       .mobile-app .btn {
         padding : 0.8rem 1.5rem;
