--- a/theme-assets/css/PCN-3d-animation2.css
+++ b/theme-assets/css/PCN-3d-animation2.css
@@ -2403,7 +2403,7 @@
       }
       .navbar .dropdown .dropdown-menu {
         background-color : white;
-        margin-top : 16px;
+        /* margin-top : 16px; */
         min-width : 200px;
         border : none;
       }
