--- a/our.css
+++ b/our.css
@@ -121,6 +121,41 @@
 }
 
 
+@media (min-width: 992px){
+.our-slider {
+    margin-right: -40px !important;
+    /* max-width: 40% !important; */
+ }
+}
+
+@media (min-width: 800px){
+    .our-slider {
+        /* margin-right: -90px !important; */
+        
+     }
+    }
+
+@media (min-width: 768px){
+    .our-slider-but1 {
+        /* margin-top: -30px !important; */
+     }
+    }
+
+
+    @media (min-width: 768px){
+        .our-slider-but2 {
+            /* margin-bottom: -10px; */
+         }
+        }
+
+
+@media (min-width: 992px){
+    .header-first-main-text {
+        margin-right: -20px !important;
+     }
+    }
+
+
 @media screen and (max-width: 768px){
     .problema {
         display: none;
